changing API method from POST to GET
